--- a/components/RepositoryPreview/RepositoryPreview.css
+++ b/components/RepositoryPreview/RepositoryPreview.css
@@ -7,7 +7,7 @@
 .RepositoryPreview--title {
     font-weight: 400;
     font-size: 1.3em;
-    line-height: 1.4em;
+    line-height: 24px;
     margin: 0 0 0.5em;
     display: inline-flex;
     justify-items: center;
@@ -25,7 +25,8 @@
     font-weight: 600;
 }
 .RepositoryPreview--title img {
-    width: 1.40em;
+    width: 24px;
+    height: 24px;
     display: inline-block;
     left: 0;
     margin: 0;
